created delete method in controller and added to index view

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,6 +2,8 @@
 
 <% @places.each do |place| %>
 <%= place.name %>
+<%= link_to "Delete", place_path(place), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete?"} %>
+
 <% end %>
 
 <%= link_to "Create new venue", new_place_path %>
