--- a/app/assets/stylesheets/components/_card_category.scss
+++ b/app/assets/stylesheets/components/_card_category.scss
@@ -8,6 +8,14 @@
     justify-content: center;
     align-items: center;
     height: 90%;
+    a{
+      text-decoration: none;
+      color: white;
+      transition: 0.1s;
+      &:hover{
+       text-decoration: underline;
+      }
+    }
   }
   .icons{
     display: flex;
@@ -23,7 +31,7 @@
       &:hover{
         color: white;
       }
-      }
+    }
 
   }
   color: white;
