--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,8 +6,9 @@
         <%= link_to edit_place_path(place.id) do %><i class="fa-solid fa-pencil"></i><% end %>
         <%= link_to place_path(place), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete?"} do %><i class="fa-solid fa-trash-can"></i><% end %>
       </div>
-      <h2><%= place.name%></h2>
+      <h2><%= link_to place.name, place_path(place.id) %></h2>
     <% end %>
+
   </div>
   <%= link_to new_place_path, class:'mt-5 btn btn-light btn-sm border' do %><i class="fa-solid fa-circle-plus"></i> Create new venue<% end %>
 </div>
