added banner, footer, button, navbar, to home page

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #202124;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +8,9 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 300px;
+}
+
+.nav-link {
+  color: white;
 }
