--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,36 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag("carousel_main.png", class: "d-sm-block w-100") %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag("carousel_2.png", class: "d-sm-block w-100" ) %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag("carousel_3.png", class: "d-sm-block w-100" ) %>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<div class="banner">
+  <div class="container">
+    <h1>Epic Locals<strong>tech skills</strong>  <strong>creative people</strong>!</h1>
+    <h2>Let's get </strong>UNHING'D<strong></h2>
+    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <a class="btn btn-ghost" href="#">Get Started!</a>
+
+  </div>
+</div>
