--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -6,5 +6,5 @@
   <p><%= booking.end_date %></p>
   <p><%= booking.total_price %></p>
   <p><%= booking.number_of_people %></p>
-  <%= link_to "Edit booking", edit_booking_path %>
+  <%= link_to "Edit booking", edit_place_booking_path(booking.place, booking) %>
 <% end %>
