--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -7,6 +7,7 @@
       <%= f.input :capacity %>
       <%= f.input :location %>
       <%= f.input :price %>
+      <%= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%= f.submit :submit, class: "btn btn-primary", data: {turbo: false} %>
   <% end %>
 </div>
