--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,4 +1,8 @@
 .carousel {
   width:640px;
-  height:360px;
+  height:100px;
+}
+
+.picture-carousel {
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))
 }
