front end small changes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,10 +9,10 @@
       <%= image_tag("carousel_main.png", class: "picture-carousel d-sm-block w-100") %>
     </div>
     <div class="carousel-item">
-      <%= image_tag("carousel_2.png", class: "picture-carousel d-sm-block w-100" ) %>
+      <%= image_tag("dark_carousel_2.png", class: "picture-carousel d-sm-block w-100" ) %>
     </div>
     <div class="carousel-item">
-      <%= image_tag("carousel_3.png", class: "d-sm-block w-100" ) %>
+      <%= image_tag("dark_carousel_3.png", class: "d-sm-block w-100" ) %>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
