--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -18,6 +18,10 @@
   text-align: center;
 }
 
+.footer-links a:hover {
+  color: #01ffff;
+}
+
 .footer-links {
   text-align: center;
   padding-bottom: 40px;
