adding the changes hope this works

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,9 +27,9 @@
 
 <div class="banner">
   <div class="container">
-    <h1>Epic Locals<strong>tech skills</strong>  <strong>creative people</strong>!</h1>
+    <h1>Epic Locations | Easy & simple | To have Fun </h1>
     <h2>Let's get </strong>UNHING'D<strong></h2>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <p>Enjoy the best party venues arround the world</p>
     <%= link_to "Let's Party!", places_path, :class => "btn btn-ghost"%>
   </div>
 </div>
