--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -41,3 +41,18 @@
   background: linear-gradient(#147EFF, #0F67DA);
   color: white;
 }
+
+.btn-ghost-black{
+  color: black;
+  border: 2px solid black;
+  padding: 8px 24px;
+  border-radius: 50px;
+  font-weight: lighter;
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+  &:hover {
+    // opacity: 1;
+    color: #01ffff;
+    border: 2px solid #01ffff;
+  }
+}
