--- a/app/assets/stylesheets/components/_card_category.scss
+++ b/app/assets/stylesheets/components/_card_category.scss
@@ -41,3 +41,20 @@
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
+
+.title {
+  a{
+    font-size: 18px;
+    text-decoration: none;
+    color: black;
+    transition: 0.1s;
+    &:hover{
+    text-decoration: underline;
+    }
+  }
+}
+p{
+  font-size: 15px;
+  color: grey;
+
+}
