--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,10 +42,9 @@
     <h3 class="mt-3">Description</h3>
     <p><%= @place.description %></p>
   </div>
-  <%= link_to "book this place", new_place_booking_path(@place), class:"btn btn-ghost-black" %>
+  <%= link_to "Book place", new_place_booking_path(@place), class:"btn btn-ghost-black" %>
   <%= link_to "Go back", places_path, class:"btn btn-ghost-black"%>
-  <%= link_to "Delete this place", place_path(@place), class:"btn btn-ghost-black",
+  <%= link_to "Delete place", place_path(@place), class:"btn btn-ghost-black",
   data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this listing?"}  %>
-  <%= link_to "Go back", places_path, class:"btn btn-ghost-black" %>
   <br>
 </div>
