--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -14,12 +14,12 @@
   <div class="carousel-inner">
 
   <div class="carousel-item active">
-    <%= cl_image_tag @place.photos.first.key, height: 300, width: 400, crop: :fill, class: "picture-carousel d-sm-block w-100" %>
+    <%= cl_image_tag @place.photos.first.key, height: 300, width: 400, class: "picture-carousel d-sm-block w-100" %>
   </div>
 
     <% @place.photos[1..].each do |photo| %>
       <div class="carousel-item">
-        <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill, class: "picture-carousel d-sm-block w-100" %>
+        <%= cl_image_tag photo.key, height: 300, width: 400, class: "picture-carousel d-sm-block w-100" %>
       </div>
     <% end %>
   </div>
