--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -5,7 +5,10 @@
       <%= f.input :category, :collection => %w[House Mansion Boat Limo Castle Island Other] %>
       <%= f.input :description %>
       <%= f.input :capacity %>
-      <%= f.input :location %>
+      <%= f.input :location,
+        input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
+        wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+      %>
       <%= f.input :price %>
       <%= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%= f.submit :submit, class: "btn btn-primary", data: {turbo: false} %>
