--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -36,8 +36,8 @@
 <div class= "container mb-3 mt-3">
   <h3><%= @place.category %> | <%= @place.name %></h3>
   <p><i class="fa-solid fa-location-dot"></i> <%= @place.location %></p>
-  <p> <i class="fa-solid fa-users"></i> <strong>Capacity:</strong> <%= @place.capacity %></p>
-  <p> <i class="fa-solid fa-tag"></i> <strong>Price:</strong> <%= @place.price %> €/night</p>
+  <p> <i class="fa-solid fa-users"></i> <strong></strong> <%= @place.capacity %></p>
+  <p> <i class="fa-solid fa-tag"></i> <strong></strong> <%= @place.price %> €/night</p>
   <div class="mb-3" style="border-top: 1px solid rgba(222, 214, 214, 0.6);" >
     <h3 class="mt-3">Description</h3>
     <p><%= @place.description %></p>
