--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,10 @@
             <%= link_to "Add Venue", new_place_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Listing", places_path, class: "nav-link" %>
+            <%= link_to "Places", places_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "My bookings", bookings_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
