--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,26 +1,28 @@
 <div class="container mt-4 mb-4">
   <h1 style="text-align: center;">EPIC PARTY PLACES</h1>
-  <div class="container mt-4 d-flex justify-content-between align-content-between flex-wrap">
+  <div class="container mt-4 d-flex justify-content-center align-content-between flex-wrap">
     <% @places.each do |place| %>
-      <div class="card-trip">
-        <% if place.photos.attached? %>
-          <img src="<%= cl_image_path place.photos.first.key, height: 300, crop: :fill %>">
-        <% else %>
-          <%= image_tag("dark_carousel_2.png") %>
-        <% end %>
-        <div class="card-trip-infos">
-          <div>
-            <h2><%= link_to place.name, place_path(place.id) %></h2>
-            <p><i class="fa-solid fa-location-dot"></i> <%= place.location %></p>
-            <p><i class="fa-solid fa-users"></i> <%= place.capacity %></p>
-            <p><strong><i class="fa-solid fa-tag"></i> <%= place.price %> €/night </strong></p>
-          </div>
-          <div class="icons">
-            <%= link_to edit_place_path(place.id) do %><i class="fa-solid fa-pencil"></i><% end %>
-            <%= link_to place_path(place), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete?"} do %><i class="fa-solid fa-trash-can"></i><% end %>
+      <%= link_to place_path(place), class:"text-decoration-none" do %>
+        <div class="card-trip">
+          <% if place.photos.attached? %>
+            <img src="<%= cl_image_path place.photos.first.key, height: 300, crop: :fill %>">
+          <% else %>
+            <%= image_tag("dark_carousel_2.png") %>
+          <% end %>
+          <div class="card-trip-infos">
+            <div>
+              <h2><%= place.name %></h2>
+              <p><i class="fa-solid fa-location-dot"></i> <%= place.location %></p>
+              <p><i class="fa-solid fa-users"></i> <%= place.capacity %></p>
+              <p><strong><i class="fa-solid fa-tag"></i> <%= place.price %> €/night </strong></p>
+            </div>
+            <div class="icons">
+              <%= link_to edit_place_path(place.id) do %><i class="fa-solid fa-pencil"></i><% end %>
+              <%= link_to place_path(place), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete?"} do %><i class="fa-solid fa-trash-can"></i><% end %>
+            </div>
           </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
   <%= link_to new_place_path, class:'mt-5 btn btn-ghost-black' do %><i class="fa-solid fa-circle-plus"></i> Add new awsome place<% end %>
