--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,8 +1,4 @@
-<h4>Edit Booking</h4>
-<%= simple_form_for [@place, @booking] do |f| %>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
-  <%= f.input :number_of_people %>
-  <%= f.association :place %>
-  <%= f.button :submit %>
-<% end %>
+<div class="container justify-content-center mb-4">
+  <h1 class="text-center">Edit booking</h1>
+  <%= render "form", booking: @booking %>
+</div>
