--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,7 +1,3 @@
-<div class="container">
-  <h1><%= @place.name %></h1>
-</div>
-
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
   <div class="carousel-indicators">
     <% count = 1 %>
@@ -33,18 +29,42 @@
   </button>
 </div>
 
-<div class= "container mb-3 mt-3">
-  <h3><%= @place.category %> | <%= @place.name %></h3>
-  <p><i class="fa-solid fa-location-dot"></i> <%= @place.location %></p>
-  <p> <i class="fa-solid fa-users"></i> <strong></strong> <%= @place.capacity %></p>
-  <p> <i class="fa-solid fa-tag"></i> <strong></strong> <%= @place.price %> €/night</p>
-  <div class="mb-3" style="border-top: 1px solid rgba(222, 214, 214, 0.6);" >
-    <h3 class="mt-3">Description</h3>
-    <p><%= @place.description %></p>
+<div class= "container mb-3 mt-3 d-flex justify-content-between">
+
+  <div class= "container">
+    <h1><%= @place.name %> | <%= @place.category %></h1>
+    <p><i class="fa-solid fa-location-dot"></i> <%= @place.location %></p>
+    <p> <i class="fa-solid fa-users"></i> <strong></strong> <%= @place.capacity %></p>
+    <p> <i class="fa-solid fa-tag"></i> <strong></strong> <%= @place.price %> €/night</p>
+    <div class="mb-3" style="border-top: 1px solid rgba(222, 214, 214, 0.6);" >
+      <h3 class="mt-3">Description</h3>
+      <p><%= @place.description %></p>
+    </div>
+    <%= link_to "Book Party!", new_place_booking_path(@place), class:"btn btn-ghost-black" %>
+    <%= link_to "Go back", places_path, class:"btn btn-ghost-black"%>
+    <%= link_to "Delete place", place_path(@place), class:"btn btn-ghost-black",
+    data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this listing?"}  %>
   </div>
-  <%= link_to "Book place", new_place_booking_path(@place), class:"btn btn-ghost-black" %>
-  <%= link_to "Go back", places_path, class:"btn btn-ghost-black"%>
-  <%= link_to "Delete place", place_path(@place), class:"btn btn-ghost-black",
-  data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this listing?"}  %>
-  <br>
+
+  <div class="container">
+    <h1 class="text-center">New booking</h1>
+    <%= simple_form_for [@place, @booking] , class:"container" do |f| %>
+      <div class="row">
+        <div class="col"><%= f.input :start_date, as: :string, input_html: { data: { controller: "flatpickr" } } %></div>
+        <div class="col"><%= f.input :end_date, as: :string, input_html: { data: { controller: "flatpickr" } }%></div>
+      </div>
+      <div class="row"><%= f.input :number_of_people %></div>
+      <div class="d-grid"><%= f.submit "Book Party!", class: "btn btn-ghost-black" %></div>
+    <% end %>
+    <br>
+    <div class="d-flex justify-content-between">
+      <p><%=@place.price%>x 0 nights</p>
+      <p>xxx €</p>
+    </div>
+    <div class="d-flex justify-content-between">
+      <p><strong>Total</strong></p>
+      <p><strong>xxx €</strong></p>
+    </div>
+  </div>
+
 </div>
