Nice party button added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,4 @@
 @import "components/index";
 @import "pages/index";
 
-@import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
+// @import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
