--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -56,3 +56,22 @@
     border: 2px solid #01ffff;
   }
 }
+
+.btn-party {
+  background-color: #fd02fd;
+  color: white;
+  border: 2px solid #555555;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.btn-party:hover {
+  background-color: #01fdfd;
+  color: white;
+}
