--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -46,7 +46,7 @@
     data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this listing?"}  %>
   </div>
 
-  <div class="container">
+  <div class="container" data-controller="change_price">
     <h1 class="text-center">New booking</h1>
     <%= simple_form_for [@place, @booking] , class:"container" do |f| %>
       <div class="row">
