--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -46,24 +46,23 @@
     data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this listing?"}  %>
   </div>
 
-  <div class="container" data-controller="change_price">
+  <div class="container" data-controller="price-change">
     <h1 class="text-center">New booking</h1>
     <%= simple_form_for [@place, @booking] , class:"container" do |f| %>
       <div class="row">
-        <div class="col"><%= f.input :start_date, as: :string, input_html: { data: { controller: "flatpickr" } } %></div>
+        <div class="col" data-action="change->price-change#changeNights" ><%= f.input :start_date, as: :string, input_html: { data: { controller: "flatpickr" } } %></div>
         <div class="col"><%= f.input :end_date, as: :string, input_html: { data: { controller: "flatpickr" } }%></div>
       </div>
       <div class="row"><%= f.input :number_of_people %></div>
       <div class="d-grid"><%= f.submit "Book Party!", class: "btn btn-ghost-black" %></div>
     <% end %>
     <br>
-    <div class="d-flex justify-content-between">
-      <p><%=@place.price%>x 0 nights</p>
-      <p>xxx €</p>
+    <div class="d-flex">
+      <p data-price-change-target="pricePerNight"><%= @place.price %></p><p style="padding-left: 7px;" data-price-change-target="nights">€ x 0 nights</p>
     </div>
     <div class="d-flex justify-content-between">
       <p><strong>Total</strong></p>
-      <p><strong>xxx €</strong></p>
+      <p><strong data-price-change-target="price">0 €</strong></p>
     </div>
   </div>
 
