Footer fix & My Bookings ✨Frontend✨

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -75,3 +75,15 @@
   background-color: #01fdfd;
   color: white;
 }
+
+.btn-sm {
+  border-radius: 0.5px;
+  background-color: #aff8f8;
+
+}
+
+.btn-sm1 {
+  border-radius: 0.5px;
+  background-color: #f5c1f3;
+
+}
