--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,6 +3,9 @@
   background-color: #202124;
   color: white;
   padding-top: 100px;
+  margin-top: auto;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-copyright {
@@ -25,4 +28,8 @@
 .footer-links {
   text-align: center;
   padding-bottom: 40px;
+}
+
+.bookings-container {
+  min-height: calc(100vh - 176px - 138px);
 }
