--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,12 +8,9 @@
 @import "font-awesome";
 
 // Your CSS partials
-@import "components/index";
 @import "pages/index";
+@import "components/index";
 
-<<<<<<< HEAD
 // @import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
-=======
-@import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
+// @import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
 @import "flatpickr/dist/flatpickr";
->>>>>>> a3fbbd1a9ec2c0f3419a5d2977a35d6bd1ac26d6
