--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -7,7 +7,7 @@
       <%= f.input :capacity %>
       <%= f.input :location,
         input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
-        wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+        wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY=pk.eyJ1IjoiaGlwcG9iIiwiYSI6ImNsYWF6cDc5MzBja2MzcWxtNHpyMXp6dmsifQ.7X11T4FCqYYoVZFiffRgZw"]}}
       %>
       <%= f.input :price %>
       <%= f.input :photos, as: :file, input_html: { multiple: true } %>
