--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,15 +25,16 @@
   </button>
 </div>
 
-<%= form_with url: places_path, method: :get, class: "d-flex" do %>
-  <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Find your next epic party venue!"
-  %>
-  <%= submit_tag "Let's Party!", class: "btn btn-ghost" %>
-<% end %>
-
+<div class="container">
+  <%= form_with url: places_path, method: :get, class: "d-flex" do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",id:"search",
+      placeholder: "Find your next epic party venue!"
+    %>
+    <%= submit_tag "Let's Party!", class: "btn btn-ghost-search" %>
+  <% end %>
+</div>
 <div class="banner">
   <div class="container">
     <h1>Epic Locations | Get wasted | Have Fun </h1>
