--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,21 +12,18 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Home", home_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Add Venue", new_place_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
             <%= link_to "Places", places_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "My bookings", bookings_path, class: "nav-link" %>
+            <%# <%= link_to "Add Party", new_place_path, class: "nav-link" %>
+            <%= link_to new_place_path, class: "nav-link" do %><i class="fa-solid fa-circle-plus"></i> Add Place<% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "My Bookings", bookings_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "My bookings", bookings_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
             </div>
           </li>
