--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -40,10 +40,14 @@
       <h3 class="mt-3">Description</h3>
       <p><%= @place.description %></p>
     </div>
-    <%= link_to "Book Party!", new_place_booking_path(@place), class:"btn btn-ghost-black" %>
     <%= link_to "Go back", places_path, class:"btn btn-ghost-black"%>
-    <%= link_to "Delete place", place_path(@place), class:"btn btn-ghost-black",
-    data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this listing?"}  %>
+    <%# <%= link_to "Delete place", place_path(@place), class:"btn btn-ghost-black", %>
+    <%# data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this listing?"}  %>
+    <div id="map" style="width: 80%; height: 400px; margin-top: 20px"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
   </div>
 
   <div class="container" data-controller="price-change">
