--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,7 @@
-<div class="container justify-content-center mb-4">
-  <h1 class="text-center">New booking</h1>
-  <%= render "form", booking: @booking %>
+<div class="wrapper-party">
+  <%= image_tag "2form.png", class:"image_form"%>
+  <div class="container party">
+    <h1 style="text-align: center;">New Booking</h1>
+    <%= render "form", booking: @booking %>
+  </div>
 </div>
