--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -74,3 +74,21 @@
   color: #01ffff;
   border: 2px solid #01ffff;
 }
+
+.btn-ghost-fill {
+  color: white;
+  border: 2px solid white;
+  background-color: rgb(3, 165, 165);
+  padding: 8px 24px;
+  border-radius: 50px;
+  font-weight: lighter;
+  transition: opacity 0.3s ease;
+}
+
+.btn-ghost-fill:hover {
+  // opacity: 1;
+//  color: #01ffff;
+  //text-shadow:   #01ffff 1px 0px , #ff00ff -1px 0px;
+  border: 2px solid rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+}
