--- a/app/assets/stylesheets/components/_card_trip.scss
+++ b/app/assets/stylesheets/components/_card_trip.scss
@@ -32,6 +32,7 @@
   font-size: 16px;
   font-weight: bold;
   margin: 0;
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .card-trip {
@@ -42,11 +43,10 @@
     opacity: .7;
     margin-bottom: 0;
     margin-top: 8px;
-    .price{
-      font-size: 15px ;
-      color: teal;
-      opacity: 0;
-    }
+  }
+  .price {
+    font-size: 15px ;
+    color: $turquesa;
   }
 }
 
