--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,33 +3,68 @@
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(196, 24, 173, 0.705) ;
 }
 
+.wrapper-party{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+ }
+
 .image_form{
   width: 100vw;
   object-fit: contain;
   position: absolute;
   z-index: 0;
 }
+
 .party{
-      /* z-index: 100; */
-      // position: relative;
-      // margin-top: -792px;
-      width: 1000px;
-      height: 800px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: rgba(0, 0, 0,0.6);
-      z-index: 100;
-      position: relative;
-      border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(0, 0, 0,0.6);
+    z-index: 100;
+    position: relative;
+    border-radius: 5px;
+    width: fit-content;
     h1{
-      padding-top: 20px;
+      margin-top: 20px;
+    }
+
+    .register-form{
+      width: 500px;
+      margin-bottom: 20px;
+      a{
+        text-decoration: none;
+        color: rgba(255, 255, 255, 0.361);
+      }
+    }
+    .booking-form{
+      width: 500px;
+      margin-bottom: 20px;
+    }
+    .places-form{
+      width: 800px;
+      margin-bottom: 20px;
+    }
+  }
+
+  .new-booking{
+    color: white;
+    border: 2px solid rgba(255, 255, 255, 0.6);
+    border-radius: 10px;
+    font-weight: lighter;
+    width: fit-content;
+    height: fit-content;
+    position: sticky;
+    top: 10px;
+    h1{
+      //text-shadow:   #01ffff 2px 0px , #ff00ff -2px 0px;
+      font-style: italic;
+    }
+    .total{
+      border-top: 1px solid rgba(255, 255, 255, 0.6);
+      padding: 10px;
+      font-weight: bold;
     }
 
   }
-   .wrapper-party{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-   }
