--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container ">
+<div class="container places-form">
   <%= simple_form_for @place do |f| %>
       <%= f.input :name %>
       <%= f.input :category, :collection => %w[House Mansion Boat Limo Castle Island Other] %>
