adding home search bar

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   align-content: center;
+  ;
  }
 
 .image_form{
@@ -67,4 +68,9 @@
       font-weight: bold;
     }
 
+  }
+
+  .search-form{
+    height: 50px;
+    margin-bottom: 5px;
   }
