--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -6,3 +6,18 @@
     font-weight: lighter;
     border-right:transparent;
   }
+
+
+  #search-home-div{
+    height: 45px;
+    justify-content: center;
+  }
+  #search-home {
+    border: 2px solid rgba(255, 255, 255, 1);
+    background-color: white;
+    border-radius: 2px;
+    padding: -3px;
+    font-weight: lighter;
+    border-right:transparent;
+    width: 600px;
+  }
