--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,45 +1,54 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+<div id="wrapper-fijo ">
+  <div id="carouselExampleIndicators" class="carousel slide home-carusel" data-bs-ride="true">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <%= image_tag("main_photo.png", class: "picture-carousel d-sm-block w-100") %>
+      </div>
+      <div class="carousel-item">
+        <%= image_tag("dark_carousel_2.png", class: "picture-carousel d-sm-block w-100" ) %>
+      </div>
+      <div class="carousel-item">
+        <%= image_tag("dark_carousel_3.png", class: "d-sm-block w-100" ) %>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <%= image_tag("carousel_main.png", class: "picture-carousel d-sm-block w-100") %>
-    </div>
-    <div class="carousel-item">
-      <%= image_tag("dark_carousel_2.png", class: "picture-carousel d-sm-block w-100" ) %>
-    </div>
-    <div class="carousel-item">
-      <%= image_tag("dark_carousel_3.png", class: "d-sm-block w-100" ) %>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 
-<div class="container">
-  <%= form_with url: places_path, method: :get, class: "d-flex" do %>
-    <%= text_field_tag :query,
-      params[:query],
-      class: "form-control",id:"search",
-      placeholder: "Find your next epic party venue!"
-    %>
-    <%= submit_tag "Let's Party!", class: "btn btn-ghost-search" %>
-  <% end %>
+  <div class="container floating-logo">
+    <%# <%= image_tag "5_200_500.png", width: 1000, class:"" %>
+    <h1 id="home-logo">UNHING'D</h1>
+    <div >
+      <%= form_with url: places_path, method: :get, class: "d-flex",id:"search-home-div" do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",id:"search-home",
+          placeholder: "Find your next epic party venue!"
+        %>
+        <%= submit_tag "PARTY HARD", class: "btn btn-ghost-search-home" %>
+      <% end %>
+    </div>
+  </div>
+
 </div>
+<br>
+
 <div class="banner">
   <div class="container">
     <h1>Epic Locations | Get wasted | Have Fun </h1>
     <h2>Let's get </strong>UNHING'D<strong></h2>
     <p>No more lame venues, enjoy the parties you deserve</p>
     <%= link_to "Start the Party!", places_path, :class => "btn btn-ghost"%>
-  </div>
+   </div>
 </div>
