--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,10 +3,11 @@
   background-position: center;
   background-color: #202124;
   padding: 150px 0;
+  margin-top: 400px;
 }
 
 .banner h1 {
-  margin: 0;
+  //margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
