--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -92,3 +92,23 @@
   border: 2px solid rgba(255, 255, 255, 0.6);
   background-color: transparent;
 }
+
+.btn-ghost-search-home {
+  color: white;
+  font-size: 40px;
+  letter-spacing: 20px;
+  width: 500px;
+  align-self: center;
+  // background-color: transparent;
+  // border: none;
+  //padding: 8px 24px;
+  //font-weight: lighter;
+  transition: opacity 0.3s ease;
+}
+
+.btn-ghost-search-home:hover {
+  // opacity: 1;
+  color: white;
+  text-shadow: #01ffff -2px 0px , #ff00ff 2px 0px;
+  width: larger;
+}
