--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -6,3 +6,8 @@
 .picture-carousel {
   background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))
 }
+
+.carousel-show {
+  width:640px;
+  height:448px;
+}
