--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,6 +1,9 @@
+<div class="container">
+  <div class= "container mb-3 mt-3 d-flex justify-content-between">
+  <div class= "container">
 
-
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+  <%# Carousel starts %>
+  <div id="carouselExampleIndicators" class="carousel carousel-show slide" data-bs-ride="true">
   <div class="carousel-indicators">
     <% count = 1 %>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"  class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -9,21 +12,21 @@
       <% count +=1 %>
     <% end %>
   </div>
-  <div class="carousel-inner">
+  <div class="carousel-inner rounded-4">
     <% if @place.photos.attached? %>
       <div class="carousel-item active">
-        <%= cl_image_tag @place.photos.first.key, height: 300, width: 400, class: "picture-carousel d-sm-block w-100" %>
+        <%= cl_image_tag @place.photos.first.key, height: 448, class: "picture-carousel d-sm-block w-100" %>
       </div>
 
       <% @place.photos[1..].each do |photo| %>
         <div class="carousel-item">
-          <%= cl_image_tag photo.key, height: 300, width: 400, class: "picture-carousel d-sm-block w-100" %>
+          <%= cl_image_tag photo.key, height: 448, class: "picture-carousel d-sm-block w-100" %>
         </div>
       <% end %>
 
     <% else %>
       <div class="carousel-item active">
-        <%= image_tag "dark_carousel_2.png", height: 300, width: 400, class: "picture-carousel d-sm-block w-100" %>
+        <%= image_tag "dark_carousel_2.png", height: 448, class: "picture-carousel d-sm-block w-100" %>
       </div>
     <% end %>
   </div>
@@ -37,12 +40,9 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<%# Carousel ends %>
 
-<div class="container">
-  <div class= "container mb-3 mt-3 d-flex justify-content-between">
-
-    <div class= "container">
-      <h1><%= @place.name %> | <%= @place.category %></h1>
+      <h1 class="mt-3"><%= @place.name %> | <%= @place.category %></h1>
       <p><i class="fa-solid fa-location-dot"></i> <%= @place.location %></p>
       <p><i class="fa-solid fa-users"></i> <strong></strong> <%= @place.capacity %></p>
       <p><i class="fa-solid fa-tag"></i> <strong></strong> <%= @place.price.to_i %> €/night</p>
@@ -52,7 +52,7 @@
       </div>
       <%# <%= link_to "Delete place", place_path(@place), class:"btn btn-ghost-black", %>
       <%# data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this listing?"}  %>
-      <div id="map" style="width: 80%; height: 400px; margin-top: 20px"
+      <div id="map" style="width: 100%; height: 400px; margin-top: 20px"
       data-controller="map"
       data-map-markers-value="<%= @markers.to_json %>"
       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
