--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,28 +1,17 @@
 .card-product {
   overflow: hidden;
-  height: 170px;
-  background: #28292b;
+  height: 120px;
+  background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
-  width: 1100px;
-  margin: 15px auto;
-  border-radius: 5px;
+  width: 900px;
+  margin: 10px auto;
 }
-
-.card-product:hover {
-  transform: scale(1.025);
-  transition: 1s;
-  .btn-cancel {
-    color: #01FFFF;
-  }
-}
-
 
 .card-product img {
   height: 100%;
-  width: 170px;
-  margin-right: 12px;
+  width: 120px;
   object-fit: cover;
 }
 
@@ -32,13 +21,13 @@
 }
 
 .card-product h2 {
-  font-size: 27px;
+  font-size: 16px;
   font-weight: bold;
   margin: 0;
 }
 
 .card-product p {
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
@@ -46,13 +35,9 @@
 }
 
 .card-product .card-product-infos {
-  padding: 10px;
+  padding: 16px;
 }
 
 .card-product .card-product-actions {
   margin-left: 350px;
-}
-
-.pricebooking {
-  color: #01FFFF
 }
