--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,21 +1,26 @@
-<div class="bookings-container">
+
+<div class="container">
   <h1 class="bookings-title">My Bookings</h1>
     <div class="bookings">
       <% @bookings.each do |booking| %>
         <% nights = (booking.end_date - booking.start_date).to_i %>
         <div class="card-product">
-          <img src=<%= cl_image_path booking.place.photos.first.key, height: 300, crop: :fill  %> />
+          <% if booking.place.photos.attached? %>
+            <img src=<%= cl_image_path booking.place.photos.first.key, height: 300, crop: :fill  %> />
+          <% else %>
+            <%= image_tag("dark_carousel_2.png") %>
+          <% end %>
+
           <div class="card-product-infos">
             <h2><%= booking.place.name %></h2>
-            <p><i class="fa-solid fa-location-dot"></i> <%= booking.place.location %></p>
-            <p><i class="fa-solid fa-bed"></i> <%= nights %> Night<%= "s" if nights > 1 %> - From <%= booking.start_date %> to <%= booking.end_date %></p>
-            <p><i class="fa-solid fa-users"></i> <%= booking.number_of_people %> People</p>
-            <p class="pricebooking"><i class="fa-solid fa-tag"></i> <strong><%= number_to_currency(booking.total_price) %></strong></p>
+            <p><%= nights %> Night<%= "s" if nights > 1 %> - From <%= booking.start_date %> to <%= booking.end_date %></p>
+            <p><%= booking.number_of_people %> People</p>
+            <p><strong><%= number_to_currency(booking.total_price) %></strong></p>
           </div>
           <div class="card-product-actions d-flex flex-column">
-            <%= link_to edit_booking_path(booking), class:'btn btn-light btn-sm btn-cancel m-1' do %><i class="fa-solid fa-pencil"></i> Edit <% end %>
+            <%= link_to edit_booking_path(booking), class:'btn btn-light btn-sm border m-1' do %><i class="fa-solid fa-pencil"></i> Edit Booking<% end %>
             <%= link_to booking_path(booking),
-            data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to cancel?"}, class:'btn btn-light btn-sm btn-cancel m-1' do %><i class="fa-solid fa-cancel"></i> Cancel <% end %>
+            data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to cancel?"}, class:'btn btn-light btn-sm border m-1' do %><i class="fa-solid fa-ban"></i> Cancel Booking<% end %>
           </div>
         </div>
       <% end %>
